fixed spacing issue on article details when one is active

--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,10 @@ body {
   transform: translateY(70px);
 }
 
+.weather-details h2 {
+  margin-bottom: 1rem;
+}
+
 .weather-article.active .weather-details {
   transform: translateY(40px);
 }
